2012-03-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* nasl/nasl_debug.c (nasl_perror): Add prospective code to send an
	ERRMSG to the client.

2012-03-02  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_server.c (openvas_server_open), nasl/nasl_ssh.c
	(nasl_ssh_exec): Fixed memleaks spotted by cppcheck.

2012-03-02  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_modify_user): Documentation added.

2012-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl.h: Removed prot for deprecated function execute_nasl_script.

2012-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	This patch was developed by Bernhard Herzog.

	* misc/network.c (set_gnutls_priorities, set_gnutls_sslv23)
	(set_gnutls_sslv3, set_gnutls_tlsv1): Removed.
	(set_gnutls_protocol): Use gnutls_priority_set_direct to set the
	various priorities instead of (indirectly via the now removed
	set_gnutls_* functions) using the deprecated functions
	gnutls_protocol_set_priority, gnutls_cipher_set_priority,
	gnutls_compression_set_priority, gnutls_mac_set_priority. The
	gnutls_priority_set_direct function accepts all the priority
	settings as a single string.

2012-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl.h: Removed NASL_LEVEL as it is long time deprecated.

	* nasl/nasl_init.c (libivars): Removed NASL_LEVEL as it is long
	time deprecated.

2012-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/openvas_server.c (openvas_server_new): Removed dead code
	about a magic user "admin" that was removed long time ago.

2012-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	This patch was developed by Bernhard Herzog.

	* misc/openvas_server.c (openvas_server_open): Remove the call to
	the deprecated gnutls_kx_set_priority function. The preceding
	gnutls_set_default_priority call should have set suitable key
	exchange priorities. The key exchange algorithms set by