@@ -102,6 +102,8 @@ static init_func libfuncs[] = {
   {"get_kb_item", get_kb_item, 1, {NULL}},
   {"get_kb_fresh_item", get_kb_fresh_item, 1, {NULL}},
   {"get_kb_list", get_kb_list, 1, {NULL}},
+  {"security_message", security_message, 1,
+   {"cvss_base" "data", "port", "proto", "protocol", "threat", NULL}},
   {"security_warning", security_warning, 1,
    {"data", "port", "proto", "protocol", NULL}},
   {"security_note", security_note, 1,
